make new menu for mosnster view, update monster property for select by weekday

--- a/OOP_RPG/OOP_RPG.csproj
+++ b/OOP_RPG/OOP_RPG.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ItemShop.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="MonsterLevel.cs" />
+    <Compile Include="MonsterOfTheDay.cs" />
     <Compile Include="MonsterSelector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
