--- a/OOP_RPG/OOP_RPG.csproj
+++ b/OOP_RPG/OOP_RPG.csproj
@@ -52,6 +52,7 @@
     <Compile Include="MonsterLevel.cs" />
     <Compile Include="MonsterOfTheDay.cs" />
     <Compile Include="MonsterSelector.cs" />
+    <Compile Include="Potion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Weapon.cs" />
