--- a/OOP_RPG/OOP_RPG.csproj
+++ b/OOP_RPG/OOP_RPG.csproj
@@ -47,6 +47,10 @@
     <Compile Include="Fight.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Hero.cs" />
+    <Compile Include="InterfaceOfArmor.cs" />
+    <Compile Include="InterfaceOfItemShop.cs" />
+    <Compile Include="InterfaceOfShield.cs" />
+    <Compile Include="InterfaceOfWeapon.cs" />
     <Compile Include="ItemShop.cs" />
     <Compile Include="Monster.cs" />
     <Compile Include="MonsterLevel.cs" />
@@ -55,6 +59,7 @@
     <Compile Include="Potion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shield.cs" />
     <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
