--- a/OOP_RPG/OOP_RPG.csproj
+++ b/OOP_RPG/OOP_RPG.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Achievement.cs" />
+    <Compile Include="AchievementManager.cs" />
     <Compile Include="Armor.cs" />
     <Compile Include="Fight.cs" />
     <Compile Include="Game.cs" />
@@ -59,6 +61,7 @@
     <Compile Include="Potion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quest.cs" />
     <Compile Include="Shield.cs" />
     <Compile Include="Weapon.cs" />
   </ItemGroup>
